test/tests/stages/8_loops/invalid_parse/do_extra_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  do
  {
  int
  identifier(a)
  ;
  }
  ;
  while
  (
  const int(1)
  )
  ;
  return
  const int(0)
  ;
  }
